--- a/app/components/profile.component.html
+++ b/app/components/profile.component.html
@@ -16,9 +16,16 @@
             <span class="label label-success">{{user.followers}} Followers</span>
             <span class="label label-info">{{user.following}} Following</span>
           </div>
+          <br>
+          <ul class="list-group">
+            <li class="list-group-item"><strong>Username: </strong>{{user.login}}</li>
+            <li class="list-group-item"><strong>Location: </strong>{{user.location}}</li>
+            <li class="list-group-item"><strong>Email: </strong>{{user.email}}</li>
+            <li class="list-group-item"><strong>Bio: </strong>{{user.bio}}</li>
+            <li class="list-group-item"><strong>Member Since: </strong>{{user.created_at}}</li>
+          </ul>
         </div>
       </div>
-
     </div>
   </div>
 </div>
